Fix header content not visible when img does not load

--- a/css/stylish-portfolio.css
+++ b/css/stylish-portfolio.css
@@ -156,11 +156,9 @@ hr.small {
     width: 100%;
     height: 100%;
     background: url('http://gratisography.com/pictures/224_1.jpg') no-repeat center center scroll;
-    -webkit-background-size: cover;
-    -moz-background-size: cover;
     background-size: cover;
-    -o-background-size: cover;
     color: white;
+    background-color: black;
 }
 
 /* About */
